fixed that the module on the overlay was invisible

--- a/client/css/editor/sidebar.css
+++ b/client/css/editor/sidebar.css
@@ -212,7 +212,7 @@ body.draggingEditorSidebarModule .editorModule.dragHighlight {
   grid-area: bottomright;
 }
 
-#editorModules > div.active {
+.active.editorModule {
   display: block;
 }
 
